Updated layout for Aws  doc site and dark mode

--- a/index.html
+++ b/index.html
@@ -3,16 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes App</title>
+    <title>AWS SAA-C03 Prep</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Notes App</h1>
-        <input type="text" id="note-input" placeholder="Enter your note">
-        <button id="add-note">Add Note</button>
-        <ul id="notes-list"></ul>
-    </div>
-    <script src="app.js"></script>
+    <header class="header">
+        <h1>AWS SAA-C03 Prep</h1>
+        <button class="toggle-btn" onclick="toggleTheme()">Dark Mode</button>
+    </header>
+
+    <main>
+        <div class="left-panel">
+            <h2>Topics</h2>
+            <button class="expand-all" onclick="toggleAllSections()">Expand All</button>
+            <div class="section">
+                <button class="collapsible">Access Management</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Command Line Interfaces</button>
+                <div class="content">
+                    <a href="#" data-topic="cli">CLI</a>
+                    <a href="#" data-topic="cloudshell">CloudShell</a>
+                </div>
+            </div>
+            <!-- Add more sections for other categories -->
+        </div>
+
+        <div class="middle-panel" id="content-panel">
+            <p>Select a topic to see the content.</p>
+        </div>
+
+        <div class="right-panel" id="toc-panel">
+            <h2>Table of Contents</h2>
+        </div>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
