--- a/index.html
+++ b/index.html
@@ -36,7 +36,163 @@
                     <a href="#" data-topic="cloudshell">CloudShell</a>
                 </div>
             </div>
-            <!-- Add more sections for other categories -->
+            <div class="section">
+                <button class="collapsible">Compute Services</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">EC2</a>
+                    <a href="#" data-topic="aws-ad">AMI</a>
+                    <a href="#" data-topic="aws-organizations">App Runner</a>
+                    <a href="#" data-topic="cognito">Batch</a>
+                    <a href="#" data-topic="connect">ECS (Elastic Container Service)</a>
+                    <a href="#" data-topic="control-tower">EKS (Elastic Kubernetes Service)</a>
+                    <a href="#" data-topic="identity-center">Elastic Beanstalk</a>
+                    <a href="#" data-topic="systems-manager">Lambda</a>
+                    <a href="#" data-topic="systems-manager">Proton</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Corporate Management</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Cost Management</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Data Transfer</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Data Migration</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Messaging</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Networking</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Scalability</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Security</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Storage</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">Utilities</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
+            <div class="section">
+                <button class="collapsible">On-Premise Options</button>
+                <div class="content">
+                    <a href="#" data-topic="iam">IAM</a>
+                    <a href="#" data-topic="aws-ad">AWS AD</a>
+                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
+                    <a href="#" data-topic="cognito">Cognito</a>
+                    <a href="#" data-topic="connect">Connect</a>
+                    <a href="#" data-topic="control-tower">Control Tower</a>
+                    <a href="#" data-topic="identity-center">Identity Center</a>
+                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                </div>
+            </div>
         </div>
 
         <div class="middle-panel" id="content-panel">
