--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
             <div class="section">
                 <button class="collapsible">Access Management</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="./topics/IAM.html" id="IAM">IAM</a>
+                    <a href="./topics/Access Management.html" data-topic="aws-ad">AWS AD</a>
+                    <a href="./topics/aws organizations.html" id="aws-organizations">AWS Organizations</a>
+                    <a href="./topics/cognito.html" data-topic="cognito">Cognito</a>
+                    <a href="./topics/connect.html" data-topic="connect">Connect</a>
+                    <a href="./topics/contrl tower.html" data-topic="control-tower">Control Tower</a>
+                    <a href="./topics/identity center.html" data-topic="identity-center">Identity Center</a>
+                    <a href="./topics/systems manager.html" data-topic="systems-manager">Systems Manager</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Command Line Interfaces</button>
                 <div class="content">
-                    <a href="#" data-topic="cli">CLI</a>
-                    <a href="#" data-topic="cloudshell">CloudShell</a>
+                    <a href="./topics/Command line interface/cli.html" data-topic="cli">CLI</a>
+                    <a href="./topics/Command line interface//clouldshell.html" data-topic="cloudshell">CloudShell</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Compute Services</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">EC2</a>
+                    <a href="./topics/compute science/ec2.html" data-topic="iam">EC2</a>
                     <a href="#" data-topic="aws-ad">AMI</a>
                     <a href="#" data-topic="aws-organizations">App Runner</a>
                     <a href="#" data-topic="cognito">Batch</a>
@@ -199,9 +199,12 @@
             <p>Select a topic to see the content.</p>
         </div>
 
-        <div class="right-panel" id="toc-panel">
-            <h2>Table of Contents</h2>
-        </div>
+        <!-- <div class="right-panel">
+            <ul id="right-pane-list">
+                <li><a href="#IAM">Section 1</a></li>
+                <li><a href="#aws-organizations">Subsection 1</a></li>
+            </ul>
+        </div> -->
     </main>
 
     <script src="script.js"></script>
