--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="collapsible">Compute Services</button>
                 <div class="content">
                     <a href="./topics/compute science/ec2.html" data-topic="iam">EC2</a>
-                    <a href="#" data-topic="aws-ad">AMI</a>
+                    <a href="./topics/compute science/AMI.html" data-topic="aws-ad">AMI</a>
                     <a href="#" data-topic="aws-organizations">App Runner</a>
                     <a href="#" data-topic="cognito">Batch</a>
                     <a href="#" data-topic="connect">ECS (Elastic Container Service)</a>
