--- a/index.html
+++ b/index.html
@@ -51,150 +51,142 @@
                 </div>
             </div>
             <div class="section">
-                <button class="collapsible">Corporate Management</button>
-                <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
-                </div>
-            </div>
-            <div class="section">
                 <button class="collapsible">Cost Management</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="aws-ad">AWS Billing</a>
+                    <a href="#" data-topic="aws-organizations">Compute Optimizer</a>
+                    <a href="#" data-topic="cognito">Cost Allocation Tags</a>
+                    <a href="#" data-topic="connect">Cost Explorer</a>
+                    <a href="#" data-topic="control-tower">Savings Plans</a>
+                    <a href="#" data-topic="identity-center">Trusted Advisor</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Data Transfer</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">App Flow</a>
+                    <a href="#" data-topic="aws-ad">Direct Connect</a>
+                    <a href="#" data-topic="aws-organizations">Storage Gateway</a>
+                    <a href="#" data-topic="cognito">Transfer</a>
+                    <a href="#" data-topic="connect">VPN</a>
+                    <a href="#" data-topic="control-tower">Virtual Interfaces</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Data Migration</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">Comprehend</a>
+                    <a href="#" data-topic="aws-ad">Forecast</a>
+                    <a href="#" data-topic="aws-organizations">Kendra</a>
+                    <a href="#" data-topic="cognito">Lex</a>
+                    <a href="#" data-topic="connect">Personalize</a>
+                    <a href="#" data-topic="control-tower">Polly</a>
+                    <a href="#" data-topic="identity-center">QuickSight</a>
+                    <a href="#" data-topic="systems-manager">Recognition</a>
+                    <a href="#" data-topic="connect">SageMaker</a>
+                    <a href="#" data-topic="control-tower">Textract</a>
+                    <a href="#" data-topic="identity-center">Transcribe</a>
+                    <a href="#" data-topic="systems-manager">Translate</a>
                 </div>
-            </div>
+            </div> 
             <div class="section">
                 <button class="collapsible">Messaging</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">EventBridge</a>
+                    <a href="#" data-topic="aws-ad">Kinesis</a>
+                    <a href="#" data-topic="aws-organizations">Message Queues</a>
+                    <a href="#" data-topic="cognito">Amazon Managed Streaming</a>
+                    <a href="#" data-topic="connect">Amazon Pinpoint</a>
+                    <a href="#" data-topic="control-tower">Simple Email Service</a>
+                    <a href="#" data-topic="identity-center">SNS</a>
+                    <a href="#" data-topic="systems-manager">SQS</a>
+                    <a href="#" data-topic="systems-manager">Simple Workflow</a>
+
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Networking</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">AWS Global Accelerator</a>
+                    <a href="#" data-topic="aws-ad">NAT</a>
+                    <a href="#" data-topic="aws-organizations">Route 53</a>
+                    <a href="#" data-topic="cognito">VPC</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Scalability</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">API Gateway</a>
+                    <a href="#" data-topic="aws-ad">ASG (Auto Scaling Groups)</a>
+                    <a href="#" data-topic="aws-organizations">ELB (Elastic Load Balancer)</a>
+                    <a href="#" data-topic="cognito">Step Functions</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Security</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">AWS Certificate Manager</a>
+                    <a href="#" data-topic="aws-ad">AWS Shield</a>
+                    <a href="#" data-topic="aws-organizations">Firewall Manager</a>
+                    <a href="#" data-topic="cognito">GuardDuty</a>
+                    <a href="#" data-topic="connect">HSM (Hardware Security Module)</a>
+                    <a href="#" data-topic="control-tower">Inspector</a>
+                    <a href="#" data-topic="identity-center">AWS Key Management Service (KMS)</a>
+                    <a href="#" data-topic="systems-manager">Amazon Macier</a>
+                    <a href="#" data-topic="cognito">Network Firewall</a>
+                    <a href="#" data-topic="cognito">Systems Manager Parameter Store</a>
+                    <a href="#" data-topic="cognito">Security Token Service (STS)</a>
+                    <a href="#" data-topic="cognito">Secrets Manager</a>
+                    <a href="#" data-topic="cognito">Security Group</a>
+                    <a href="#" data-topic="cognito">WAF (Web Application Firewall)</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Storage</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">Aurora</a>
+                    <a href="#" data-topic="aws-ad">DocumentDB</a>
+                    <a href="#" data-topic="aws-organizations">DynamoDB</a>
+                    <a href="#" data-topic="cognito">EBS (Elastic Block Store)</a>
+                    <a href="#" data-topic="connect">EFS (Elastic File System)</a>
+                    <a href="#" data-topic="control-tower">ElastiCache</a>
+                    <a href="#" data-topic="identity-center">Amazon FSx for Lustre</a>
+                    <a href="#" data-topic="systems-manager">Amazon FSx for Windows File Server</a>
+                    <a href="#" data-topic="iam">EC2 Instance Store</a>
+                    <a href="#" data-topic="aws-ad">DocumentDB</a>
+                    <a href="#" data-topic="iam">Lake Formation</a>
+                    <a href="#" data-topic="aws-ad">OpenSearch</a>
+                    <a href="#" data-topic="iam">Quantum Ledger Database</a>
+                    <a href="#" data-topic="aws-ad">RDS (Relational Database Service)</a>
+                    <a href="#" data-topic="iam">Redis</a>
+                    <a href="#" data-topic="aws-ad">Amazon Redshift</a>
+                    <a href="#" data-topic="iam">S3 (Simple Storage Service)</a>
+                    <a href="#" data-topic="aws-ad">Timestream</a>
                 </div>
             </div>
             <div class="section">
                 <button class="collapsible">Utilities</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">AWS Certificate Manager</a>
+                    <a href="#" data-topic="aws-ad">AWS Config</a>
+                    <a href="#" data-topic="aws-organizations">Athena</a>
+                    <a href="#" data-topic="cognito">Backup</a>
+                    <a href="#" data-topic="connect">CloudTrail</a>
+                    <a href="#" data-topic="control-tower">CloudWatch</a>
+                    <a href="#" data-topic="identity-center">CloudFront</a>
+                    <a href="#" data-topic="systems-manager">Elastic MapReduce (EMR)</a>
+                    <a href="#" data-topic="systems-manager">AWS Glue</a>
                 </div>
-            </div>
+        </div>
             <div class="section">
                 <button class="collapsible">On-Premise Options</button>
                 <div class="content">
-                    <a href="#" data-topic="iam">IAM</a>
-                    <a href="#" data-topic="aws-ad">AWS AD</a>
-                    <a href="#" data-topic="aws-organizations">AWS Organizations</a>
-                    <a href="#" data-topic="cognito">Cognito</a>
-                    <a href="#" data-topic="connect">Connect</a>
-                    <a href="#" data-topic="control-tower">Control Tower</a>
-                    <a href="#" data-topic="identity-center">Identity Center</a>
-                    <a href="#" data-topic="systems-manager">Systems Manager</a>
+                    <a href="#" data-topic="iam">Well-Architected Framework</a>
+                    <a href="#" data-topic="cognito">Pillars</a>
+                    <a href="#" data-topic="connect">Principles</a>
                 </div>
             </div>
         </div>
-
         <div class="middle-panel" id="content-panel">
             <p>Select a topic to see the content.</p>
         </div>
