App runner img updated

--- a/topics/compute science/app runner.html
+++ b/topics/compute science/app runner.html
@@ -58,7 +58,7 @@
     <p>Below is a diagram illustrating the architecture and workflow of AWS App Runner:</p>
 
     <div class="diagram">
-        <img src="https://d1.awsstatic.com/serverless/AppRunner/app_runner_overview.5ecab2d7c2a94774b01b369a848a6d17.png" alt="AWS App Runner Architecture Diagram">
+        <img src="https://docs.aws.amazon.com/images/apprunner/latest/dg/images/architecture.png" alt="AWS App Runner Architecture Diagram">
     </div>
 
     <h2>How AWS App Runner Works</h2>
